--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.3"
 edition = "2021"
 description = "ASCII art title generator with random gradient effects"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/coryzibell/playbill"
+homepage = "https://github.com/coryzibell/playbill"
+documentation = "https://docs.rs/playbill"
 
 [dependencies]
 figlet-rs = "0.1.5"
